[gd_scene load_steps=13 format=2]

[ext_resource path="res://ressources/Images/MainMenuBackground.PNG" type="Texture" id=1]
[ext_resource path="res://ressources/Font/TiwipiFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://ressources/2Danim/loading/loading7.png" type="Texture" id=4]
[ext_resource path="res://ressources/2Danim/loading/loading8.png" type="Texture" id=5]
[ext_resource path="res://ressources/2Danim/loading/loading6.png" type="Texture" id=6]
[ext_resource path="res://ressources/2Danim/loading/loading4.png" type="Texture" id=7]
[ext_resource path="res://ressources/2Danim/loading/loading5.png" type="Texture" id=8]
[ext_resource path="res://ressources/2Danim/loading/loading1.png" type="Texture" id=9]
[ext_resource path="res://ressources/2Danim/loading/loading3.png" type="Texture" id=10]
[ext_resource path="res://ressources/2Danim/loading/loading2.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundImage" type="Sprite" parent="."]
position = Vector2( -136, 160 )
texture = ExtResource( 1 )
offset = Vector2( 1096, 380 )

[node name="Menu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Polygon2D" parent="Menu"]
scale = Vector2( 0.444444, 1 )
color = Color( 0.243137, 0.243137, 0.243137, 0.878431 )
polygon = PoolVector2Array( 576, 0, 576, 1080, 0, 1080, 0, 0 )

[node name="Play" type="Button" parent="Menu"]
margin_top = 466.0
margin_right = 256.0
margin_bottom = 526.0
custom_fonts/font = ExtResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu"]
margin_top = 594.0
margin_right = 256.0
margin_bottom = 654.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Polygon2D" parent="ServerMenu"]
position = Vector2( 192, -7.62939e-06 )
scale = Vector2( 0.355555, 1 )
color = Color( 0.243137, 0.243137, 0.243137, 0.878431 )
polygon = PoolVector2Array( 3600, 64, 720.001, 64, 720.001, 1024, 3600, 1024 )

[node name="Error" type="Control" parent="ServerMenu"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorBackground" type="Polygon2D" parent="ServerMenu/Error"]
position = Vector2( 288, 80 )
scale = Vector2( 0.311111, 0.201111 )
color = Color( 0.796078, 0.156863, 0.156863, 0.878431 )
polygon = PoolVector2Array( 3600, 64, 720.001, 64, 720.001, 1024, 3600, 1024 )

[node name="AdressEmpty" type="Label" parent="ServerMenu/Error/ErrorBackground"]
visible = false
margin_left = 822.858
margin_top = 159.116
margin_right = 1491.86
margin_bottom = 358.116
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 2 )
text = "ERROR: The Server Adress is empty,
please enter an Adress to access a game server"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InvalidAddress" type="Label" parent="ServerMenu/Error/ErrorBackground"]
visible = false
margin_left = 822.858
margin_top = 159.116
margin_right = 1491.86
margin_bottom = 358.116
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 2 )
text = "ERROR: The entered Address is wrong
Please enter a valid address"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="ServerMenu"]
margin_left = 512.0
margin_top = 896.0
margin_right = 768.0
margin_bottom = 956.0
custom_fonts/font = ExtResource( 2 )
text = "<= Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServer" type="Button" parent="ServerMenu"]
margin_left = 1152.0
margin_top = 896.0
margin_right = 1408.0
margin_bottom = 956.0
custom_fonts/font = ExtResource( 2 )
text = "Join Server"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpAddress" type="LineEdit" parent="ServerMenu"]
margin_left = 512.0
margin_top = 316.0
margin_right = 1408.0
margin_bottom = 452.0
custom_fonts/font = ExtResource( 2 )
align = 1
max_length = 15
placeholder_text = "Server Adress"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectingToServer" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Polygon2D" parent="ConnectingToServer"]
position = Vector2( 480, 144 )
scale = Vector2( 0.222222, 0.733333 )
color = Color( 0.243137, 0.243137, 0.243137, 0.878431 )
polygon = PoolVector2Array( 3600, 64, 720.001, 64, 720.001, 1024, 3600, 1024 )

[node name="ConnectingLabel" type="Label" parent="ConnectingToServer"]
margin_left = 873.0
margin_top = 320.0
margin_right = 1047.0
margin_bottom = 356.0
custom_fonts/font = ExtResource( 2 )
text = "Connecting ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectedLabel" type="Label" parent="ConnectingToServer"]
visible = false
margin_left = 727.0
margin_top = 512.0
margin_right = 883.0
margin_bottom = 548.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 2 )
text = "Connected!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConnectionFailedLabel" type="Label" parent="ConnectingToServer"]
visible = false
margin_left = 726.0
margin_top = 448.0
margin_right = 882.0
margin_bottom = 523.0
rect_scale = Vector2( 3, 3 )
custom_fonts/font = ExtResource( 2 )
text = "Connection
Failed..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingAnim" type="AnimatedSprite" parent="ConnectingToServer"]
position = Vector2( 960, 624 )
scale = Vector2( 50, 50 )
frames = SubResource( 1 )
frame = 3
playing = true

[node name="ConnectionTimeOut" type="Timer" parent="ConnectingToServer"]
wait_time = 30.0
one_shot = true

[node name="5sTimerFailure" type="Timer" parent="ConnectingToServer"]
wait_time = 5.0
one_shot = true

[connection signal="pressed" from="Menu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="ServerMenu/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="ServerMenu/JoinServer" to="." method="_on_JoinServer_pressed"]
[connection signal="timeout" from="ConnectingToServer/ConnectionTimeOut" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="ConnectingToServer/5sTimerFailure" to="." method="_on_5sTimerFailure_timeout"]
